# PCAT

./: .gitignore  README.id.md  README.md  pyproject.toml  requirements.txt
docs/: README.md  index.html
docs/assets/: site.css
docs/reference/: PCAT_ARCHITECTURE.md  PCAT_FUTURE_CTF_UPDATE.md  PCAT_MANUAL.md  PCAT_ROADMAP_AND_DECISIONS.md  PCAT_TECHNICAL_REFERENCE.md
src/pcat/: __init__.py  analysis.py  artifacts.py  capture.py  cli.py  errors.py  evidence.py  models.py  reports.py  stories.py  stringtools.py  tshark_parser.py  utils.py
tests/: test_analysis_v21.py  test_analysis_v24.py  test_artifacts.py  test_cli.py  test_models.py  test_stories.py  test_stringtools.py  test_tshark_parser.py  test_utils.py  test_v2_contract.py
